package com.design.behaviour.mediator;

/**
 * @ClassName: SiChuanControlTower
 * @Description:
 * @Author yj
 * @Date 2023年06月12日
 */
public class SiChuanControlTower extends ControlTower{
	@Override
	Boolean acceptRequest() {

		// 先看跑道空没空
		for (Captain captain : captains) {
			// captain.
		}
		// 如果空了就放行
		// 没空就不放行
		return null;
	}
}
